plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.menu'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

test {
	jvmArgs("-XX:+EnableDynamicAgentLoading")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-api:2.5.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
	implementation 'jakarta.validation:jakarta.validation-api'
	implementation 'org.hibernate.validator:hibernate-validator'
	implementation 'org.springframework.boot:spring-boot-actuator'
	implementation 'org.springframework.boot:spring-boot-actuator-autoconfigure'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core'
}

tasks.named('test') {
	useJUnitPlatform()
}
